tests/ui/type-qpath-eof3.stderr
error: no rules expected the token `as`
 --> $DIR/tests/ui/type-qpath-eof3.rs:5:19
  |
5 |     input = [{ <T as }]
  |                   ^^ no rules expected this token in macro call
